# ledge

./: .gitignore  Cargo.toml  README.md  config.example.json  index.html
chunks/: README.md.json  alo.md.json  bar.md.json  building-binaries-with-rust.md.json  foo.md.json  index.md.json  mujebem.md.json  tijebem.md.json
content/: README.md  alo.md  building-binaries-with-rust.md  index.md
content/ola/sunce/: mujebem.md
content/something/: bar.md  foo.md
content/sunce/: mujebem.md  tijebem.md
foo/haha/: desii.md
migrations/: 20240114123548_create_content.down.sql  20240114123548_create_content.up.sql  20240114123548_initial.down.sql  20240114123548_initial.up.sql
public/: admin.html  index.html  index.js  styles.css
public/admin/: index.html  login.html  login.js  styles.css
public/error/: unauthorized.html
src/: auth.rs  chunk.rs  config.rs  db.rs  document.rs  error.rs  htmx.rs  main.rs  notifiy.rs  router.rs  state.rs  vector_db.rs
src/auth/: db.rs  models.rs
src/db/: models.rs
src/document/: db.rs  models.rs
src/llm/: chunk.rs  mod.rs
src/llm/chunk/: seq.rs  ssw.rs  sw.rs
src/router/: admin.rs
web/: .prettierrc  README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.svelte  app.css  main.js  markdown.css
web/src/lib/: DocumentData.svelte  SidebarEntry.svelte  showdown.js
web/src/lib/icon/: DirectoryIcon.svelte  Icon.svelte  MarkdownIcon.svelte
