[package]
edition = "2021"
name = "knawledger"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
axum = "0.7.4"
chrono = { version = "0.4.33", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.30"
htmxpress = "0.1.0"
lazy_static = "1.4.0"
markdown = "1.0.0-alpha.11"
minijinja = "1.0.11"
notify = "6.1.1"
serde = "1.0.183"
serde_yaml = "0.9.31"
sqlx = { version = "0.7.3", features = [
    "postgres",
    "chrono",
    "macros",
    "any",
    "runtime-tokio",
    "uuid",
] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.0", features = ["fs", "tracing", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["v4", "serde"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
