[package]
edition = "2021"
name = "ledgeknaw"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
async-recursion = "1.0.5"
axum = "0.7.4"
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header", "cookie-private"] }
axum-macros = "0.4.1"
base64 = "0.22.0"
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.5.3", features = ["derive"] }
cookie = "0.18.1"
dotenv = "0.15.0"
futures = "0.3.30"
htmxpress = "0.1.0"
lazy_static = "1.4.0"
notify = "6.1.1"
qdrant-client = "1.7.0"
serde = "1.0.183"
serde_json = "1.0.114"
serde_yaml = "0.9.31"
sqlx = { version = "0.7.3", features = [
    "postgres",
    "chrono",
    "macros",
    "any",
    "runtime-tokio",
    "uuid",
] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.0", features = ["fs", "tracing", "trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
validify = "1.3.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
